--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>잔여 과목 확인</title>
   </head>
   <body>
-    <h1><a href="index".html" title ="홈으로">잔여 과목 확인</a></h1>
+    <h1><a href="index.html" title ="홈으로">잔여 과목 확인</a></h1>
 
     <ol>
       <li><a href = "Department.html" title = "본전공">본전공</a></li>
@@ -14,5 +14,11 @@
       <li><a href = "schedule.html" title = "학사일정">학사일정</a></li>
       <li><a href = "shortcuts.html" title = "바로가기">바로가기</a></li>
     </ol>
+    
+    <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/SK6Sm2Ki9tI"
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+    encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
   </body>
 </html>
