--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
       <li><a href = "schedule.html" title = "학사일정">학사일정</a></li>
       <li><a href = "shortcuts.html" title = "바로가기">바로가기</a></li>
     </ol>
-    
+
     <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/SK6Sm2Ki9tI"
     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
     encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
+  <div id="disqus_thread"></div>
+<script>
+    (function() { 
+    var d = document, s = d.createElement('script');
+    s.src = 'https://subjects1.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </body>
 </html>
